--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Login Eminus</title>
+    <title>Login Eminus DEMO</title>
 </head>
 <body>
     <h2>Inicia sesión en Eminus</h2>
